# vst3_public_sdk

samples/vst/: CMakeLists.txt
samples/vst-hosting/audiohost/: CMakeLists.txt
samples/vst-hosting/editorhost/: CMakeLists.txt
samples/vst-hosting/editorhost/source/: editorhost.cpp
samples/vst-hosting/editorhost/source/platform/win32/: platform.cpp  window.cpp
samples/vst/adelay/: CMakeLists.txt
samples/vst/again/: CMakeLists.txt
samples/vst/again_aax/: CMakeLists.txt
samples/vst/hostchecker/: CMakeLists.txt
samples/vst/mda-vst3/: CMakeLists.txt
samples/vst/mda-vst3/source/: mdaPianoProcessor.cpp
samples/vst/note_expression_synth/: CMakeLists.txt
samples/vst/note_expression_synth/source/: note_expression_synth_ui.cpp
samples/vst/note_expression_text/: CMakeLists.txt
samples/vst/pitchnames/: CMakeLists.txt
source/main/: pluginfactory.h
source/vst/aaxwrapper/: CMakeLists.txt
source/vst/hosting/: module_win32.cpp
